# zircon

./: .gitignore  Cargo.toml  extension.toml  extension.wasm  tasks.json
.github/workflows/: release.yml
crates/zircon-server/: Cargo.toml
crates/zircon-server/src/: completion.rs  crystal_cli.rs  definition.rs  diagnostics.rs  hover.rs  index.rs  main.rs  resolver.rs  symbols.rs  uri.rs  workspace.rs
fixtures/monorepo/backend/: shard.yml
fixtures/monorepo/backend/spec/: user_spec.cr
fixtures/monorepo/backend/src/: app.cr
fixtures/monorepo/backend/src/models/: post.cr  user.cr
fixtures/monorepo/frontend/: index.html
fixtures/monorepo/internal/: README.md
languages/crystal/: config.toml  injections.scm  outline.scm  runnables.scm  tags.scm
snippets/: crystal.json
src/: analyzer.rs  analyzer_test.rs  lib.rs  semantic.rs  spec_runner.rs  tags_test.rs
